fixed letter spacing

--- a/clock.css
+++ b/clock.css
@@ -43,7 +43,6 @@ body{
     position: absolute;
     top: 20px;
     font-size: 20%;
-    letter-spacing: 0.2em;
     z-index: 100;
     color: var(--color-text-secondary);
 }
@@ -61,14 +60,12 @@ body{
 
 #date{
     font-size: 20%;
-    letter-spacing: 0.2em;
     margin-bottom: 10px;
     z-index: 100;
 }
 
 #weather{
     font-size: 20%;
-    letter-spacing: 0.2em;
     z-index: 100;
     text-align: center;
     position: absolute;
